syntax = "proto3";

import "google/protobuf/timestamp.proto";

package services;
option go_package = "proto/services";

message ChangeServicesRequest {
  string UserId = 1;
  string ServiceTypeId = 2;
  int32 Quantity = 3;
}

message Balance {
  int32 Available = 1;
  int32 Delivered = 2;
  int32 Locked = 3;
  int32 Total = 4;
}

message UserBalance {
  string UserId = 1;
  map<string, Balance> Balance = 2;
}

message GetBalanceRequest {
  string UserId = 1;
  google.protobuf.Timestamp At = 2;
}

service BalanceService {
  rpc Add(ChangeServicesRequest) returns (UserBalance) {}
  rpc GetBalance(GetBalanceRequest) returns (UserBalance) {}
  rpc WriteOff(ChangeServicesRequest) returns (UserBalance) {}
  rpc Lock(ChangeServicesRequest) returns (UserBalance) {}
  rpc CancelLock(ChangeServicesRequest) returns (UserBalance) {}
}

message DeliveryRequest {
  string UserId = 1;
  string ServiceTypeId = 2;
  bytes Details = 3;
}

message Delivery {
  string Id = 1;
  string UserId = 2;
  string ServiceTypeId = 3;
  string Status = 4;
  google.protobuf.Timestamp StartTime = 5;
  google.protobuf.Timestamp FinishTime = 6;
  bytes Details = 7;
}

message GetDeliveryRequest {
  string Id = 1;
}

message CancelDeliveryRequest {
  string Id = 1;
  google.protobuf.Timestamp CancelTime = 2;
}

message CompleteDeliveryRequest {
  string Id = 1;
  google.protobuf.Timestamp CompleteTime = 2;
}

message UpdateDetailsRequest {
  string Id = 1;
  bytes Details = 2;
}

service DeliveryService {
  rpc Create(DeliveryRequest) returns (Delivery) {}
  rpc GetDelivery(GetDeliveryRequest) returns (Delivery) {}
  rpc Cancel(CancelDeliveryRequest) returns (Delivery) {}
  rpc Complete(CompleteDeliveryRequest) returns (Delivery) {}
  rpc UpdateDetails(UpdateDetailsRequest) returns (Delivery) {}
}